fine tuning anims

--- a/Learn c# unity YT/Assembly-CSharp.csproj
+++ b/Learn c# unity YT/Assembly-CSharp.csproj
@@ -72,11 +72,15 @@
     <Compile Include="Assets\NetTest\server.cs" />
     <Compile Include="Assets\NetTest\SpriteTiler.cs" />
     <Compile Include="Assets\NetTest\tcpServer.cs" />
+    <Compile Include="Assets\Scripts\A_EncData.cs" />
+    <Compile Include="Assets\Scripts\A_RawData.cs" />
     <Compile Include="Assets\Scripts\animationEnd.cs" />
+    <Compile Include="Assets\Scripts\chestBScript.cs" />
     <Compile Include="Assets\Scripts\DragableUI.cs" />
     <Compile Include="Assets\Scripts\extra.cs" />
     <Compile Include="Assets\Scripts\KeyMenuScript.cs" />
     <Compile Include="Assets\Scripts\MouseMove.cs" />
+    <Compile Include="Assets\Scripts\Rst_Transform.cs" />
     <Compile Include="Assets\Scripts\userAScript.cs" />
     <Compile Include="Assets\Scripts\UserMenuScript.cs" />
     <Compile Include="Assets\UNIDUCIAL (UNITY)\FiducialController.cs" />
